--- a/Promotion_Prediction.ipynb
+++ b/Promotion_Prediction.ipynb
@@ -5460,6 +5460,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('cleaned_promotion_train.csv.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -5553,15 +5562,6 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv('cleaned_promotion_train.csv.csv', index=False)"
    ]
   },
   {
@@ -7669,6 +7669,7 @@
    "source": [
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "\n",
+    "# Define the parameter distribution\n",
     "param_dist = {\n",
     "    'bootstrap': [True, False],\n",
     "    'max_depth': [10, 20, 30, 40, 50, 60, 70, 80, 90, 100, None],\n",
@@ -7677,7 +7678,12 @@
     "    'min_samples_split': [2, 5, 10],\n",
     "    'n_estimators': [200, 400, 600, 800, 1000, 1200, 1400, 1600, 1800, 2000],\n",
     "    'criterion': ['gini', 'entropy'],\n",
-    "    'max_samples': [None, 0.5, 0.75, 1.0]\n",
+    "    'max_samples': [None, 0.5, 0.75, 1.0],\n",
+    "    'class_weight': [None, 'balanced', 'balanced_subsample'],\n",
+    "    'min_impurity_decrease': [0.0, 0.01, 0.02, 0.05],\n",
+    "    'oob_score': [True, False],\n",
+    "    'warm_start': [False, True],\n",
+    "    'ccp_alpha': [0.0, 0.01, 0.1, 0.001]\n",
     "}\n",
     "\n",
     "# Initialize the RandomizedSearchCV object\n",
