--- a/Promotion_Prediction.ipynb
+++ b/Promotion_Prediction.ipynb
@@ -3053,6 +3053,13 @@
     "plt.title('Feature Importances')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the feature importance visualisation, avg_training_score turn out to be identified as the most important factor to be considered by the company for position promotion."
+   ]
   }
  ],
  "metadata": {
