--- a/Data Visualisation.ipynb
+++ b/Data Visualisation.ipynb
@@ -8,11 +8,9 @@
    "source": [
     "# Data Analytics Library\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
     "# Data Visualization Libraries \n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
