--- a/Promotion_Prediction.ipynb
+++ b/Promotion_Prediction.ipynb
@@ -6755,11 +6755,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Print the evaluation metrices in table format\n",
     "def evaluationTable(classifiers, X_test, y_test):\n",
     "    # Create an empty DataFrame to store the evaluation metrics\n",
     "    evaluation_table = pd.DataFrame(columns=['Accuracy', 'Precision', 'Recall', 'F1_Score'])\n",
@@ -6778,12 +6777,16 @@
     "        # Add performance metrics to the evaluation table\n",
     "        evaluation_table.loc[classifier_name] = [accuracy, precision, recall, f1]\n",
     "\n",
+    "    # Set the display precision for the DataFrame\n",
+    "    pd.set_option('display.precision', 4)\n",
+    "    \n",
+    "    # Return the evaluation table\n",
     "    return evaluation_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -6824,45 +6827,45 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Logistic Regression</th>\n",
-       "      <td>0.712468</td>\n",
-       "      <td>0.714034</td>\n",
-       "      <td>0.712334</td>\n",
-       "      <td>0.713183</td>\n",
+       "      <td>0.7125</td>\n",
+       "      <td>0.7140</td>\n",
+       "      <td>0.7123</td>\n",
+       "      <td>0.7132</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Decision Tree</th>\n",
-       "      <td>0.863582</td>\n",
-       "      <td>0.840313</td>\n",
-       "      <td>0.899007</td>\n",
-       "      <td>0.868670</td>\n",
+       "      <td>0.8636</td>\n",
+       "      <td>0.8403</td>\n",
+       "      <td>0.8990</td>\n",
+       "      <td>0.8687</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>0.868827</td>\n",
-       "      <td>0.841270</td>\n",
-       "      <td>0.910389</td>\n",
-       "      <td>0.874466</td>\n",
+       "      <td>0.8688</td>\n",
+       "      <td>0.8413</td>\n",
+       "      <td>0.9104</td>\n",
+       "      <td>0.8745</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>K-nearest Neighbors</th>\n",
-       "      <td>0.832788</td>\n",
-       "      <td>0.810584</td>\n",
-       "      <td>0.870137</td>\n",
-       "      <td>0.839305</td>\n",
+       "      <td>0.8328</td>\n",
+       "      <td>0.8106</td>\n",
+       "      <td>0.8701</td>\n",
+       "      <td>0.8393</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     Accuracy  Precision    Recall  F1_Score\n",
-       "Logistic Regression  0.712468   0.714034  0.712334  0.713183\n",
-       "Decision Tree        0.863582   0.840313  0.899007  0.868670\n",
-       "Random Forest        0.868827   0.841270  0.910389  0.874466\n",
-       "K-nearest Neighbors  0.832788   0.810584  0.870137  0.839305"
+       "                     Accuracy  Precision  Recall  F1_Score\n",
+       "Logistic Regression    0.7125     0.7140  0.7123    0.7132\n",
+       "Decision Tree          0.8636     0.8403  0.8990    0.8687\n",
+       "Random Forest          0.8688     0.8413  0.9104    0.8745\n",
+       "K-nearest Neighbors    0.8328     0.8106  0.8701    0.8393"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7296,7 +7299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -7346,69 +7349,69 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Logistic Regression</th>\n",
-       "      <td>0.712468</td>\n",
-       "      <td>0.714034</td>\n",
-       "      <td>0.712334</td>\n",
-       "      <td>0.713183</td>\n",
-       "      <td>0.725317</td>\n",
-       "      <td>0.716578</td>\n",
-       "      <td>0.741971</td>\n",
-       "      <td>0.729053</td>\n",
+       "      <td>0.7125</td>\n",
+       "      <td>0.7140</td>\n",
+       "      <td>0.7123</td>\n",
+       "      <td>0.7132</td>\n",
+       "      <td>0.7253</td>\n",
+       "      <td>0.7166</td>\n",
+       "      <td>0.7420</td>\n",
+       "      <td>0.7291</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Decision Tree</th>\n",
-       "      <td>0.863582</td>\n",
-       "      <td>0.840313</td>\n",
-       "      <td>0.899007</td>\n",
-       "      <td>0.868670</td>\n",
-       "      <td>0.671263</td>\n",
-       "      <td>0.678696</td>\n",
-       "      <td>0.645626</td>\n",
-       "      <td>0.661748</td>\n",
+       "      <td>0.8636</td>\n",
+       "      <td>0.8403</td>\n",
+       "      <td>0.8990</td>\n",
+       "      <td>0.8687</td>\n",
+       "      <td>0.6713</td>\n",
+       "      <td>0.6787</td>\n",
+       "      <td>0.6456</td>\n",
+       "      <td>0.6617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>0.868827</td>\n",
-       "      <td>0.841270</td>\n",
-       "      <td>0.910389</td>\n",
-       "      <td>0.874466</td>\n",
-       "      <td>0.701600</td>\n",
-       "      <td>0.692553</td>\n",
-       "      <td>0.720930</td>\n",
-       "      <td>0.706457</td>\n",
+       "      <td>0.8688</td>\n",
+       "      <td>0.8413</td>\n",
+       "      <td>0.9104</td>\n",
+       "      <td>0.8745</td>\n",
+       "      <td>0.7016</td>\n",
+       "      <td>0.6926</td>\n",
+       "      <td>0.7209</td>\n",
+       "      <td>0.7065</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>K-nearest Neighbors</th>\n",
-       "      <td>0.832788</td>\n",
-       "      <td>0.810584</td>\n",
-       "      <td>0.870137</td>\n",
-       "      <td>0.839305</td>\n",
-       "      <td>0.721456</td>\n",
-       "      <td>0.711253</td>\n",
-       "      <td>0.741971</td>\n",
-       "      <td>0.726287</td>\n",
+       "      <td>0.8328</td>\n",
+       "      <td>0.8106</td>\n",
+       "      <td>0.8701</td>\n",
+       "      <td>0.8393</td>\n",
+       "      <td>0.7215</td>\n",
+       "      <td>0.7113</td>\n",
+       "      <td>0.7420</td>\n",
+       "      <td>0.7263</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    Oversampled                               Undersampled  \\\n",
-       "                       Accuracy Precision    Recall  F1_Score     Accuracy   \n",
-       "Logistic Regression    0.712468  0.714034  0.712334  0.713183     0.725317   \n",
-       "Decision Tree          0.863582  0.840313  0.899007  0.868670     0.671263   \n",
-       "Random Forest          0.868827  0.841270  0.910389  0.874466     0.701600   \n",
-       "K-nearest Neighbors    0.832788  0.810584  0.870137  0.839305     0.721456   \n",
+       "                    Oversampled                            Undersampled  \\\n",
+       "                       Accuracy Precision  Recall F1_Score     Accuracy   \n",
+       "Logistic Regression      0.7125    0.7140  0.7123   0.7132       0.7253   \n",
+       "Decision Tree            0.8636    0.8403  0.8990   0.8687       0.6713   \n",
+       "Random Forest            0.8688    0.8413  0.9104   0.8745       0.7016   \n",
+       "K-nearest Neighbors      0.8328    0.8106  0.8701   0.8393       0.7215   \n",
        "\n",
-       "                                                   \n",
-       "                    Precision    Recall  F1_Score  \n",
-       "Logistic Regression  0.716578  0.741971  0.729053  \n",
-       "Decision Tree        0.678696  0.645626  0.661748  \n",
-       "Random Forest        0.692553  0.720930  0.706457  \n",
-       "K-nearest Neighbors  0.711253  0.741971  0.726287  "
+       "                                                \n",
+       "                    Precision  Recall F1_Score  \n",
+       "Logistic Regression    0.7166  0.7420   0.7291  \n",
+       "Decision Tree          0.6787  0.6456   0.6617  \n",
+       "Random Forest          0.6926  0.7209   0.7065  \n",
+       "K-nearest Neighbors    0.7113  0.7420   0.7263  "
       ]
      },
-     "execution_count": 185,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7590,7 +7593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -7631,29 +7634,29 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Random Forest Classifier</th>\n",
-       "      <td>0.868827</td>\n",
-       "      <td>0.841270</td>\n",
-       "      <td>0.910389</td>\n",
-       "      <td>0.874466</td>\n",
+       "      <td>0.8688</td>\n",
+       "      <td>0.8413</td>\n",
+       "      <td>0.9104</td>\n",
+       "      <td>0.8745</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Fine-Tuned Random Forest Classifier</th>\n",
-       "      <td>0.870644</td>\n",
-       "      <td>0.846421</td>\n",
-       "      <td>0.906767</td>\n",
-       "      <td>0.875556</td>\n",
+       "      <td>0.8706</td>\n",
+       "      <td>0.8464</td>\n",
+       "      <td>0.9068</td>\n",
+       "      <td>0.8756</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                     Accuracy  Precision    Recall  F1_Score\n",
-       "Random Forest Classifier             0.868827   0.841270  0.910389  0.874466\n",
-       "Fine-Tuned Random Forest Classifier  0.870644   0.846421  0.906767  0.875556"
+       "                                     Accuracy  Precision  Recall  F1_Score\n",
+       "Random Forest Classifier               0.8688     0.8413  0.9104    0.8745\n",
+       "Fine-Tuned Random Forest Classifier    0.8706     0.8464  0.9068    0.8756"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
